--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,28 @@
 
+
+@techreport{tsandilas:2016,
+  TITLE = {{Accounting for Chance Agreement in Gesture Elicitation Studies}},
+  AUTHOR = {Tsandilas, Theophanis and Dragicevic, Pierre},
+  URL = {https://hal.archives-ouvertes.fr/hal-01267288},
+  TYPE = {Research Report},
+  NUMBER = {1584},
+  PAGES = {5},
+  INSTITUTION = {{LRI - CNRS, University Paris-Sud}},
+  YEAR = {2016},
+  MONTH = Feb,
+  KEYWORDS = {Gesture elicitation ; agreement rate ; agreement coefficient ; chance agreement ; kappa coefficients ; confidence intervals},
+  PDF = {https://hal.archives-ouvertes.fr/hal-01267288/file/main.pdf},
+  HAL_ID = {hal-01267288},
+  HAL_VERSION = {v1},
+}
+
+@article{tsandilas:2018,
+ author = {Tsandilas, Theophanis},
+ title = {Fallacies of Agreement: A Critical Review of Consensus Assessment Methods for Gesture Elicitation},
+ journal = {ACM Transactions on Computer-Human Interaction},
+ year = {2018},
+} 
+
 @inproceedings{Vatavu:2015,
  author = {Vatavu, Radu-Daniel and Wobbrock, Jacob O.},
  title = {Formalizing Agreement Analysis for Elicitation Studies: New Measures, Significance Test, and Toolkit},
@@ -387,3 +411,51 @@ url = {http://dx.doi.org/10.1214/aos/1176344552},
 volume = {7},
 year = {1979}
 }
+
+@article {spitzer:1974,
+	author = {Spitzer, Robert L. and Fleiss, Joseph L.},
+	title = {A Re-analysis of the Reliability of Psychiatric Diagnosis},
+	volume = {125},
+	number = {587},
+	pages = {341--347},
+	year = {1974},
+	doi = {10.1192/bjp.125.4.341},
+	publisher = {The Royal College of Psychiatrists},
+	issn = {0007-1250},
+	URL = {http://bjp.rcpsych.org/content/125/587/341},
+	eprint = {http://bjp.rcpsych.org/content/125/587/341.full.pdf},
+	journal = {The British Journal of Psychiatry}
+}
+
+@article{uebersax:1982,
+	author = {Uebersax, John S. },
+	title = {A design-independent method for measuring the reliability of psychiatric diagnosis},
+	booktitle = {Journal of Psychiatric Research},
+	volume = {17},
+	number = {4},
+	isbn = {0022-3956},
+	journal = {Journal of Psychiatric Research},
+	year = {1982},
+	pages = {335--342},
+	publisher = {Elsevier},
+	Ty = {JOUR},
+	doi = {http://dx.doi.org/10.1016/0022-3956(82)90039-5},
+}
+
+@inproceedings{Bousseau:2016,
+ author = {Bousseau, Adrien and Tsandilas, Theophanis and Oehlberg, Lora and Mackay, Wendy E.},
+ title = {How Novices Sketch and Prototype Hand-Fabricated Objects},
+ booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+ series = {CHI '16},
+ year = {2016},
+ isbn = {978-1-4503-3362-7},
+ location = {Santa Clara, California, USA},
+ pages = {397--408},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2858036.2858159},
+ doi = {10.1145/2858036.2858159},
+ acmid = {2858159},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {collaborative design, fabrication, novice designers, physical prototyping, sketching},
+} 
