--- a/tochi-elicitation.Rmd
+++ b/tochi-elicitation.Rmd
@@ -211,14 +211,14 @@ Readers may wonder whether such bias levels are realistic. The figure below show
 ###Interpreting Agreement Values
 @Vatavu:2015 proposed some generic guidelines on how to interpret the magnitude of agreement: AR < .100 is low agreement, .100 < AR < .300 is medium, .300 < AR < .500 is high, and AR > .500 is very high agreement. The guidelines derive from two types of analysis: (1) a probabilistic reasoning, and (2) a survey of agreement rates from past studies. 
 
-We showed earlier that AR can be misleading about the level of true agreement. For example, agreement rates for the study of @lahey2011 were AR = .251 (Session 2) and AR = .298 (Session 3). These values correspond to <b>medium agreement</b> according to @Vatavu:2015. However, our analysis shows a very low chance-corrected agreement for this study, where Fleiss' Kappa is equal to .040, 95% CI [-.064, .144] for Session 2, and .043, 95% CI [-.056, .141] for Session 3. These values are not even statistically significantly different than zero. 
+We showed earlier that AR can be misleading about the level of true agreement. For example, agreement rates for the study of @lahey2011 were AR = .251 (Session 2) and AR = .298 (Session 3). These values correspond to <b>medium agreement</b> according to @Vatavu:2015. However, our analysis shows a very low chance-corrected agreement for this study, where Fleiss' Kappa is equal to .040, 95% CI [-.064, .144] for Session 2, and .043, 95% CI [-.056, .141] for Session 3. These values are not even statistically significantly higher than zero. 
 
 This analysis confirms the conclusion of the authors who state: <i>"the consensus on the mapping of those bend gestures to actions was overall low, showing that each participant had his or her own preference”</i> [@lahey2011]. In this case, the authors relied on intuition and common sense to reach the right conclusion, despite the fact that their A scores were similar or higher than representative averages of older gesture-elicitation studies [@Wobbrock:2005;@Wobbrock:2009].
 
 Even if one forgets the problem of chance agreement, the probabilistic reasoning of @Vatavu:2015 has flaws that lead to arbitrary conclusions. The article further explains that even if one corrects these flaws, relying on statistics to assess the magnitude of agreement is not feasible. To this end, we need other criteria, such as usability metrics and longer-term studies.
 
 ###Statistical Inference
-The third issue that the article investigates is how support statistical inference. A careful analysis of the *Vrd* and the *Vb* statistics of Vatavu and Wobbrock shows that the probabilistic reasoning that the authors used to derive them has flaws. Our Monte Carlo simulations further demonstrate that both statistics yield Type I error rates that are orders of magnitude higher than their nominal levels. 
+The third issue that the article investigates is how to support statistical inference. A careful analysis of the *Vrd* and the *Vb* statistics of Vatavu and Wobbrock shows that the probabilistic reasoning that the authors used to derive them has flaws. Our Monte Carlo simulations further demonstrate that both statistics yield Type I error rates that are orders of magnitude higher than their nominal levels. 
 
 The following figure shows a live evaluation of the *Vrd* statistic. We repeatedly generate N random samples of proposals for two referents, where N represents the number of participants in a gesture elicitation study. We repeat the process by taking samples from nine source populations, where each approximates a different agreement rate AR, from .10 to .90. We observe that Type I errors are extremely large. The evaluation of the Vb statistic yields similar results, where Type I errors are again unacceptably high.
 
@@ -318,14 +318,14 @@ The evaluations reported in the article consider different distribution models t
 ##Remedies and Recommendations
 Fortunately, other research disciplines have long established methods to support statistical inference for agreement indices [@gwet2014]. Those are based on interval estimation and resampling methods, in particular jackknifing [@quenouille1949] and bootstrapping [@efron1979]. The TOCHI article further evaluates them in the context of gesture elicitation and shows how to apply them to analyze real datasets. The article also discusses limitations of such methods. In particular, jackknife and bootstrap confidence intervals may not be precise when applied to individual referents, and sample sizes are small. In such cases, driving conclusions based on statistical significance is not a good practice. 
 
-Overall, not a single statistic is enough to capture the results of a gesture elicitation study. My recommendation is to report both raw percent agreement and chance-corrected agreement indices, as well as agreement indices specific to individual signs. A separate investigation of the observed bias distribution is also recommended for every gesture elicitation study. Finally, agreement scores have little value by themselves. In order to interpret them, one needs to know exactly what participants agree upon, i.e., know how signs are defined and how proposals are classified into these signs. It is therefore imperative that authors clarify how they define their sign vocabularies, how they classify observed gestures into these vocabularies, and how they verify the reliability of this classification process.
+Overall, a single statistic is not enough to capture the results of a gesture elicitation study. My recommendation is to report both raw percent agreement and chance-corrected agreement indices, as well as agreement indices specific to individual signs. A separate investigation of the observed bias distribution is also recommended for every gesture elicitation study. Finally, agreement scores have little value by themselves. In order to interpret them, one needs to know exactly what participants agree upon, i.e., know how signs are defined and how proposals are classified into these signs. It is therefore imperative that authors clarify how they define their sign vocabularies, how they classify observed gestures into these vocabularies, and how they verify the reliability of this classification process.
 
 ##Feedback and Comments
 I am not a statistician, and writing this artcile has been a learning process for me. I will appreciate any feedback on mistakes or other problems that you may discover in my analyses. I am also interested in comments and suggestions on how to improve or extend this work. 
 
 Creating an easy-to-use R package for the the statistics recommended by the article is a future goal. For the moment, you can use the [R code](https://github.com/ephanis/TOCHI-supplementary) provided as supplementary material. Please, go through [the case study](https://www.lri.fr/~fanis/tochi2018/agreement-case-study.html) for concrete examples. Feel free to contact me to indicate problems or ask questions.
 
-This page has been implemented with [Shiny](https://shiny.rstudio.com/), and its code is publically available [here](https://github.com/ephanis/Agreement-TOCHI).
+This page has been implemented with [Shiny](https://shiny.rstudio.com/), and its code can be downloaded from [here](https://github.com/ephanis/Agreement-TOCHI).
 
 ##References
 
