--- a/tsandilas-2018.bib
+++ b/tsandilas-2018.bib
@@ -1,7 +1,7 @@
 @article{Tsandilas:2018,
  author = {Tsandilas, Theophanis},
  title = {Fallacies of Agreement: A Critical Review of Consensus Assessment Methods for Gesture Elicitation},
- journal = {ACM Transactions of Computer-Human Interaction (TOCHI)},
+ journal = {ACM Transactions on Computer-Human Interaction (TOCHI)},
  issue_date = {June 2018},
  volume = {25},
  number = {3},
